[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "rafpy"
version = "0.1.6"
description = "First package from a notebook"
readme = "README.md"
authors = [{name = "Avery Books", email = "abooks104@gmail.com"}]
requires-python = ">3.8"
dependencies = [
    "numpy",
    "matplotlib",
    "scipy",
]

[tool.setuptools]
packages = ["rafpy"]
